--- a/src/app/Components/menu-details-dashboard/menu-details-dashboard.component.html
+++ b/src/app/Components/menu-details-dashboard/menu-details-dashboard.component.html
@@ -54,7 +54,7 @@
         type="button"
         class="btn btn-primary d-inline mr-2 btn-block mt-3"
       >
-        update
+        Update Menu
       </button>
     </fieldset>
   </form>
