--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,8 +7,8 @@
 <app-footer></app-footer>-->
 
 <!-- <app-delivery></app-delivery> -->
-
-<app-dashboard></app-dashboard>
+<app-admin-login></app-admin-login>
+<!--<app-dashboard></app-dashboard>-->
 
 <!--<app-change-email></app-change-email> -->
 <!--<app-change-password></app-change-password> -->
