--- a/src/app/Components/dashboard/dashboard.component.html
+++ b/src/app/Components/dashboard/dashboard.component.html
@@ -9,7 +9,7 @@
         <h3>UserName</h3>
         <hr> 
         <ul class="nav nav-pills flex-column" style="padding: 10px;">
-            <li routerLinkActive="active"><i [routerLink]="['/overviewdashboard']" class="fas fa-home"  placement= 'top' ngbTooltip="Overview"></i><a [routerLink]="['/overviewdashboard']" > Overview </a></li>
+            <li routerLinkActive="active"><i [routerLink]="['/dashboard']" class="fas fa-home"  placement= 'top' ngbTooltip="Overview"></i><a [routerLink]="['/dashboard']" > Overview </a></li>
             <li routerLinkActive="active"><i [routerLink]="['/orderlist']" class="fas fa-pizza-slice" placement= 'top' ngbTooltip="Orders"></i><a [routerLink]="['/orderlist']"> Orders</a></li>
             <li routerLinkActive="active"><i [routerLink]="['/showrestaurants']" class="fas fa-utensils" placement= 'top'  ngbTooltip="Restaurants"></i><a [routerLink]="['/showrestaurants']" style="font-size: 24px;"> Restaurants</a></li>
             <li routerLinkActive="active"><i [routerLink]="['/addrestaurant']" class="fas fa-calendar-plus" placement= 'top' ngbTooltip="Add"></i><a [routerLink]="['/addrestaurant']" style="font-size: 21px;"> Add Restaurant</a></li>
