--- a/src/app/Components/header/header.component.scss
+++ b/src/app/Components/header/header.component.scss
@@ -126,3 +126,26 @@ select{
   width: 80px !important;
   height: 35px;
 }
+
+
+#ModalSignUp-btn, #Modal-Lgn-btn {
+	border-radius: 4px;
+    line-height: 30px;
+    font-weight: 600;
+    border: none;
+	background: #e7624b;
+}
+#ModalSignUp-btn:hover, #Modal-Lgn-btn:hover {
+	background-color: #DF3019;
+}
+#Login-FB-btn{
+	background-color: #4267b2;
+    color: #fff;
+    border: none;
+    font-size: 15px;
+    font-weight: 500;
+    text-align: center;
+    letter-spacing: .01em;
+	line-height: 30px;
+    box-shadow: 0 1px 2px 0 rgba(0,0,0,.4);
+}
