--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,13 @@
 <!-- <router-outlet></router-outlet> -->
 
 <!-- <app-header></app-header> -->
-<!--<div>
+<div>
     <router-outlet></router-outlet>
 </div>
-<app-footer></app-footer>-->
+<app-footer></app-footer>
 
 <!-- <app-delivery></app-delivery> -->
-<app-admin-login></app-admin-login>
+<!-- <app-admin-login></app-admin-login> -->
 <!--<app-dashboard></app-dashboard>-->
 
 <!--<app-change-email></app-change-email> -->
