--- a/src/app/Components/resturant/resturant.component.html
+++ b/src/app/Components/resturant/resturant.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-<div class="container-fluid">
+<div class="container-fluid pl-0">
     <!-- cover image -->
     <div class="row">
         <div class="col-md-12  px-0">
