--- a/src/app/Components/about/about.component.html
+++ b/src/app/Components/about/about.component.html
@@ -73,4 +73,5 @@
             <img class="img-responsive" src="../../../assets/Asset3.png" alt="asset4" width="100%" height="auto">
         </div>
     </div>
+    <app-footer></app-footer>
 </div>
