--- a/src/app/Components/delivery-features-order-online/delivery-features-order-online.component.html
+++ b/src/app/Components/delivery-features-order-online/delivery-features-order-online.component.html
@@ -141,7 +141,7 @@
         </div>
         <!--end_Map_Section-->
     </div>
-
+    <app-footer></app-footer>
 </main>
 
 <!-- <div>{{usrNmfrmprnt}}</div>
