--- a/src/app/Components/no-available/no-available.component.html
+++ b/src/app/Components/no-available/no-available.component.html
@@ -33,11 +33,11 @@
     </div>
       <!-----------right Side--------------------------->
       <div class="col-sm-10 ">
-        <h3 style="padding-top: 10px; padding-left: 16px;">Discover Top Dishes</h3>
+        <!--<h3 style="padding-top: 10px; padding-left: 16px;">Discover Top Dishes</h3>
       <img src="/assets/pic1.png" height="150px" width="300px">
-      <p style="margin-left: 12%;">All</p>
+      <p style="margin-left: 12%;">All</p>-->
       <br><br>
-      <h4>Restaurants <sub>(0)</sub> </h4><br>
+      <h3>Restaurants <sub>(0)</sub> </h3><br><br>
       <div class="row">
         <div class="col-12">
             <img class="noorder" src="/assets/no-delivery-restaurants.svg">
@@ -46,6 +46,7 @@
       </div>
 </div>
 </div>
+<app-footer></app-footer>
 </div>
     
       
