--- a/src/app/Components/resturant/resturant.component.html
+++ b/src/app/Components/resturant/resturant.component.html
@@ -186,4 +186,5 @@
         <div class="inner-outlet">
             <router-outlet></router-outlet>
         </div>
+        <app-footer></app-footer>
 </div>
