--- a/src/app/Components/terms/terms.component.html
+++ b/src/app/Components/terms/terms.component.html
@@ -65,5 +65,5 @@
             Service is prohibited and, in such circumstances, you agree not to use or access the Site or Services in
             any way.</p>
     </div>
-
+    <app-footer></app-footer>
 </div>
