--- a/src/app/Components/header/header.component.html
+++ b/src/app/Components/header/header.component.html
@@ -29,12 +29,12 @@
           <button class="btn sign my-2 my-sm-0" data-toggle="modal" data-target="#mySignUpModal" >{{'hm-SIGNUP'|translate}}</button>
           <a href="#" class="cart"><i style="font-size: 24px; " class="fas fa-shopping-cart"></i></a>
     
-          <select class="form-control" #selectedLang (change)="switchLang(selectedLang.value)">
+          <!--<select class="form-control" #selectedLang (change)="switchLang(selectedLang.value)">
             <option *ngFor="let language of translate.getLangs()" [value]="language"
               [selected]="language === translate.currentLang">
               {{ language }}
             </option>
-          </select>
+          </select>-->
         
         <!--</form>-->
       </div>
@@ -52,7 +52,7 @@
     <span class="navbar-toggler-icon"></span>
   </button>
 
-  <div class="collapse navbar-collapse" id="navbarTogglerDemo02" style="height: 50px;">
+  <div class="collapse navbar-collapse tabs" id="navbarTogglerDemo02" style="height: 50px;">
     <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
       <li class="nav-item">
         <a class="nav-link" [routerLink]="['/delivery']" routerLinkActive="active">{{'deliveryLink' | translate }}</a>
@@ -65,7 +65,7 @@
       </li>
     </ul>
     <!-----right Side -->
-    <ul class="navbar-nav navbar-after mr-auto mt-2 mt-lg-0">
+    <ul class="navbar-nav navbar-after ml-auto mt-2 mt-lg-0">
       <li class="nav-item">
         <a class="nav-link" href="#"><i class="fas fa-bell"></i>{{'Notification'|translate}}</a>
       </li>
@@ -82,12 +82,12 @@
       </li>
       </ul>
       <a href="#" class="cart"><i style="font-size: 24px; " class="fas fa-shopping-cart"></i></a>
-      <select class="form-control" #selectedLang (change)="switchLang(selectedLang.value)">
+      <!--<select class="form-control" #selectedLang (change)="switchLang(selectedLang.value)">
         <option *ngFor="let language of translate.getLangs()" [value]="language"
           [selected]="language === translate.currentLang">
           {{ language }}
         </option>
-      </select>
+      </select>-->
   </div>
 </nav> 
 </div>
